[package]
name = "esp-hal-smartled"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.22", optional=true }
esp-hal-embassy = { version = "0.5", optional=true }
smart-leds-trait  = "0.3"
fugit             = "0.3"
document-features = "0.2.10"
defmt = { version = "0.3.8", optional=true }

[dev-dependencies]
esp-hal = { version = "0.22" }
esp-backtrace       = { version = "0.14", features = ["exception-handler", "panic-handler", "println"] }
esp-println = { version = "0.12", features = ["auto"] }
smart-leds = "0.4"
cfg-if = "1"

[features]
defmt   = ["dep:defmt", "esp-hal/defmt"]
esp32   = ["esp-hal/esp32",   "esp-hal-embassy?/esp32", "esp-backtrace/esp32", "esp-println/esp32"]
esp32c2 = ["esp-hal/esp32c2", "esp-hal-embassy?/esp32c2", "esp-backtrace/esp32c2", "esp-println/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-hal-embassy?/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-hal-embassy?/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6"]
esp32h2 = ["esp-hal/esp32h2", "esp-hal-embassy?/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2"]
esp32s2 = ["esp-hal/esp32s2", "esp-hal-embassy?/esp32s2", "esp-backtrace/esp32s2", "esp-println/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-hal-embassy?/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3"]

